--- a/requirements.txt
+++ b/requirements.txt
@@ -4,15 +4,18 @@ model2vec==0.3.0
 pydantic==2.9.2
 numpy==1.26.4
 safetensors==0.4.5
+cachetools==5.5.0
+psutil==6.0.0
 
-# EmbeddingGemma dependencies (PyTorch CPU-only for Railway)
-torch==2.6.0
+# PyTorch CPU-only version installed separately in Dockerfile to use CPU-only index
+# This saves 2-3GB RAM by excluding CUDA libraries
+
+# Transformer libraries
 transformers>=4.50.0  # Qwen3 requires recent transformers (model type 'qwen3')
 sentence-transformers==3.3.1
 
-# Qwen3 Reranker with 4-bit quantization (GPU)
-bitsandbytes==0.45.0
-accelerate==1.2.1
+# GPU-related dependencies removed (using CPU-only mode)
+# bitsandbytes and accelerate not needed for CPU inference
 
 # Optimum + ONNX Runtime for optimized CPU inference
 # Note: Using latest optimum to support recent transformers versions
