feat: optimize inference with torch.compile and fix auto-unload bug
- Enable torch.compile for SentenceTransformer models (configurable via env var)
- Add flash_attn dependency for optimized attention kernels
- Add logging for SDPA/Flash Attention usage
- Fix bug where model auto-unloading background task was not started
- Add benchmark and inspection scripts

--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,6 @@ onnxruntime==1.23.2  # Requires numpy<2.0 (incompatible with NumPy 2.x)
 
 # MTEB for model evaluation (optional, dev only)
 # mteb==1.18.0
+
+# Optimization
+flash_attn>=2.0.0  # Faster attention implementation for Transformer models
